load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "orchestrator_lib",
    srcs = [
        "log.go",
        "main.go",
    ],
    importpath = "github.com/lukso-orchestrator/orchestrator",
    visibility = ["//visibility:private"],
    deps = ["//vendor/github.com/urfave/cli/v2:cli"],
)

go_binary(
    name = "orchestrator",
    embed = [":orchestrator_lib"],
    visibility = ["//visibility:public"],
)
