load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "orchestrator_lib",
    srcs = [
        "log.go",
        "main.go",
    ],
    importpath = "github.com/lukso-network/lukso-orchestrator/orchestrator",
    visibility = ["//visibility:private"],
    deps = ["@com_github_urfave_cli_v2//:go_default_library"],
)

go_binary(
    name = "orchestrator",
    embed = [":orchestrator_lib"],
    visibility = ["//visibility:public"],
)
