load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "spinner",
    srcs = ["spinner.go"],
    importpath = "github.com/lukso-network/lukso-orchestrator/tools/spin-up/spinner",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_docker_docker//api/types",
        "@com_github_docker_docker//api/types/container",
        "@com_github_docker_docker//api/types/network",
        "@com_github_docker_docker//api/types/volume",
        "@com_github_docker_docker//client",
        "@com_github_docker_docker//pkg/stdcopy",
    ],
)

go_test(
    name = "spinner_test",
    srcs = ["spinner_test.go"],
    embed = [":spinner"],
    deps = [
        "@com_github_docker_docker//api/types",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
